Add consul and ansible - wip

--- a/ansible_copy_dana_delete_this/ssh_conf.j2
+++ b/ansible_copy_dana_delete_this/ssh_conf.j2
@@ -1,6 +1,6 @@
 StrictHostKeyChecking=no
 
-{% for node in nodes %}
+{% for node in groups['consul_cluster'] %}
 Host {{ node }}
   HostName {{ node }}
   IdentityFile {{ server_identity }}
