--- a/modules/logging/kibana.sh.tmpl
+++ b/modules/logging/kibana.sh.tmpl
@@ -13,7 +13,7 @@ echo "INFO: userdata started"
 wget https://artifacts.elastic.co/downloads/kibana/kibana-oss-7.10.2-amd64.deb
 dpkg -i kibana-*.deb
 echo 'server.host: "0.0.0.0"' > /etc/kibana/kibana.yml
-systemctl enable kibana
+echo 'elasticsearch.hosts: [ "http://elasticsearch.service.consul:9200" ]' >> /etc/kibana/kibana.yml
 systemctl start kibana
 
 # # filebeat
